--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "json-server": "^0.12.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.2.0"
   }
 }
